Version 3.4
Optimisation
Ajouts de tests